[package]
name = "import_host_metrics"
version.workspace = true
description = "A tool for wind tunnel to import host metrics"
license.workspace = true
authors.workspace = true
edition.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["env"] }
env_logger = { workspace = true }
influxlp-tools = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
