[package]
name = "app_install"
version = "0.3.0-dev.1"
edition = "2021"
build = "../scenario_build.rs"

[dependencies]
anyhow = { workspace = true }
holochain_types = { workspace = true }
holochain_wind_tunnel_runner = { workspace = true }

[build-dependencies]
happ_builder = { workspace = true }

[lints]
workspace = true

[[package.metadata.required-dna]]
name = "callback"
zomes = ["callback"]

[[package.metadata.required-happ]]
name = "callback"
dnas = ["callback"]

[[package.metadata.required-dna]]
name = "large"
zomes = ["large"]

[[package.metadata.required-happ]]
name = "large"
dnas = ["large"]
