[package]
name = "app_install"
version = "0.1.0"
edition.workspace = true
build = "../scenario_build.rs"
publish = false

[dependencies]
holochain_wind_tunnel_runner = { workspace = true }

[build-dependencies]
happ_builder = { workspace = true }

[lints]
workspace = true

[[package.metadata.required-dna]]
name = "callback"
zomes = ["callback"]

[[package.metadata.required-happ]]
name = "callback"
dnas = ["callback"]

[[package.metadata.required-dna]]
name = "large"
zomes = ["large"]

[[package.metadata.required-happ]]
name = "large"
dnas = ["large"]
