[package]
name = "app_install"
version = "0.1.0"
edition.workspace = true
build = "../scenario_build.rs"
publish = false

[dependencies]
holochain_wind_tunnel_runner = { workspace = true }

[build-dependencies]
happ_builder = { workspace = true }

[lints]
workspace = true

[[package.metadata.required-dna]]
name = "callback"
zomes = ["callback"]

[[package.metadata.required-happ]]
name = "callback"
dnas = ["callback"]

[[package.metadata.required-dna]]
name = "large"
zomes = ["large"]

[[package.metadata.required-happ]]
name = "large"
dnas = ["large"]

[package.metadata.fetch-required-happ]
name = "foo"
url = "https://github.com/holochain/dino-adventure/releases/download/v0.3.0-dev.0/dino-adventure-v0.3.0-dev.0.happ"
sha256 = "1eafa0d852d9e96e54f0b6969fb06de83989ece0059bc2b376884ac52fb6a63a"
