[package]
name = "domino"
version = "0.1.0"
edition.workspace = true
# build = "../scenario_build.rs"
publish = false

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }   
serde_yaml = { workspace = true }
rmp-serde = { workspace = true }

holochain_types = { workspace = true }
holochain_wind_tunnel_runner = { workspace = true }

rave_engine = "0.2.2"
semver = "1.0.10"
zfuel = "0.3.1"

# [build-dependencies]
# happ_builder = { workspace = true }

[lints]
workspace = true

# [package.metadata.required-dna]
# name = "countersigning"
# zomes = ["countersigning"]

# [package.metadata.required-happ]
# name = "countersigning"
# dnas = ["countersigning"]
