[package]
name = "full_arc_create_validated_zero_arc_read"
version = "0.1.0"
edition.workspace = true
build = "../scenario_build.rs"
publish = false

[dependencies]
anyhow = { workspace = true }
holochain_types = { workspace = true }
holochain_wind_tunnel_runner = { workspace = true }
kitsune2_api = { workspace = true }
kitsune2_core = { workspace = true }
timed_and_validated_integrity = { workspace = true }

[build-dependencies]
happ_builder = { workspace = true }

[lints]
workspace = true

[package.metadata.required-dna]
name = "timed_and_validated"
zomes = ["timed_and_validated"]

[package.metadata.required-happ]
name = "timed_and_validated"
dnas = ["timed_and_validated"]
