[package]
name = "kitsune_continuous_flow"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }

kitsune_wind_tunnel_runner = { workspace = true }

[lints]
workspace = true

# This key must be present for the happ builder to work,
# but it's empty since kitsune scenarios do not require dnas or happs.
[package.metadata]
