[package]
name = "local_signals"
version = "0.1.0"
edition.workspace = true
build = "../scenario_build.rs"
publish = false

[dependencies]
tokio = { workspace = true }
holochain_wind_tunnel_runner = { workspace = true }

[build-dependencies]
happ_builder = { workspace = true }

[lints]
workspace = true

[package.metadata.required-dna]
name = "signal"
zomes = ["signal"]

[package.metadata.required-happ]
name = "signal"
dnas = ["signal"]
