[package]
name = "mixed_arc_get_agent_activity"
version = "0.1.0"
edition.workspace = true
build = "../scenario_build.rs"
publish = false

[dependencies]
anyhow = { workspace = true }
holochain_wind_tunnel_runner = { workspace = true }
holochain_types = { workspace = true }

[build-dependencies]
happ_builder = { workspace = true }

[lints]
workspace = true

[package.metadata.required-dna]
name = "agent_activity"
zomes = ["agent_activity"]

[package.metadata.required-happ]
name = "agent_activity"
dnas = ["agent_activity"]
