[package]
name = "path_validation"
version = "0.1.0"
edition.workspace = true
build = "../scenario_build.rs"
publish = false

[dependencies]
holochain_types = { workspace = true }
holochain_wind_tunnel_runner = { workspace = true }
path_validated_integrity = { workspace = true }

[build-dependencies]
happ_builder = { workspace = true }

[lints]
workspace = true

[package.metadata.required-dna]
name = "path_validated"
zomes = ["path_validated"]

[package.metadata.required-happ]
name = "path_validated"
dnas = ["path_validated"]
