[package]
name = "remote_call"
version = "0.1.0"
edition = "2021"
build = "../scenario_build.rs"

[dependencies]
anyhow = { workspace = true }
holochain_types = { workspace = true }
trycp_wind_tunnel_runner = { workspace = true }

[build-dependencies]
happ_builder = { workspace = true }

[lints]
workspace = true
