[package]
name = "remote_call_rate"
version = "0.1.0"
edition = "2021"
build = "../scenario_build.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
log = { workspace = true }

holochain_types = { workspace = true }
holochain_wind_tunnel_runner = { workspace = true }
remote_call_integrity = { workspace = true }
kitsune2_api = { workspace = true }
kitsune2_core = { workspace = true }
holo_hash = { workspace = true, features = ["kitsune2"] }

[build-dependencies]
happ_builder = { workspace = true }

[lints]
workspace = true

[package.metadata.required-dna]
name = "remote_call"
zomes = ["remote_call"]

[package.metadata.required-happ]
name = "remote_call"
dnas = ["remote_call"]
