[package]
name = "remote_signal"
version = "0.1.0"
edition = "2021"
build = "../scenario_build.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
log = { workspace = true }

holochain_types = { workspace = true }
trycp_wind_tunnel_runner = { workspace = true }
remote_signal_zome_integrity = { workspace = true}

[build-dependencies]
happ_builder = { workspace = true }

[lints]
workspace = true

[package.metadata.required-dna]
name = "remote_signal_zome"
zomes = ["remote_signal_zome"]

[package.metadata.required-happ]
name = "remote_signal_zome"
dnas = ["remote_signal_zome"]
