[package]
name = "remote_signals"
version = "0.1.0"
edition.workspace = true
build = "../scenario_build.rs"
publish = false

[dependencies]
tokio = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }

holochain_types = { workspace = true }
holochain_wind_tunnel_runner = { workspace = true }
remote_signal_integrity = { workspace = true }

[build-dependencies]
happ_builder = { workspace = true }

[lints]
workspace = true

[package.metadata.required-dna]
name = "remote_signal"
zomes = ["remote_signal"]

[package.metadata.required-happ]
name = "remote_signal"
dnas = ["remote_signal"]
